feat: navigate to meters on route
